--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-community/blur": "^4.3.2",
+    "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
@@ -22,6 +25,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "^13.9.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
