--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "expo": "^48.0.7",
+    "expo-av": "~13.2.1",
     "expo-constants": "~14.2.1",
     "expo-font": "^11.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
+    "expo-speech": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.2.0",
@@ -26,6 +28,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "^13.9.0",
+    "react-native-voice": "^0.3.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
